// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RuleCard should render with a eventType name, target name, filter passthrow and skip execution enable 1`] = `
<div>
  <div
    aria-label="element card rule"
    class="MuiPaper-root MuiCard-root makeStyles-ruleCard-317 MuiPaper-elevation1 MuiPaper-rounded"
  >
    <div
      aria-label="header rule card"
      class="MuiCardHeader-root makeStyles-ruleCardHeader-318"
    >
      <div
        class="MuiCardHeader-avatar"
      >
        <div
          aria-label="avatar icon"
          class="MuiAvatar-root MuiAvatar-circle makeStyles-ruleCardAvatar-327 makeStyles-ruleCardAvatarOrange-331 MuiAvatar-colorDefault"
        >
          T
        </div>
      </div>
      <div
        class="MuiCardHeader-content"
      >
        <span
          class="MuiTypography-root MuiCardHeader-title MuiTypography-body2 MuiTypography-displayBlock"
        >
          Rule 2
        </span>
        <span
          class="MuiTypography-root MuiCardHeader-subheader MuiTypography-body2 MuiTypography-colorTextSecondary MuiTypography-displayBlock"
        >
          1/1/2020 11:10:10
        </span>
      </div>
      <div
        class="MuiCardHeader-action"
      >
        <button
          aria-label="settings"
          class="MuiButtonBase-root MuiIconButton-root"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
    <hr
      class="MuiDivider-root"
    />
    <div
      aria-label="content card rule"
      class="makeStyles-ruleCardContent-319"
    >
      <div
        aria-label="eventType name card rule"
        class="makeStyles-ruleCardBody-320"
      >
        <p
          class="MuiTypography-root makeStyles-ruleCardBodyLabel-321 MuiTypography-body1"
        >
          Event Type:
        </p>
        <p
          aria-label="eventType name"
          class="MuiTypography-root makeStyles-ruleCardBodyName-322 MuiTypography-body1"
        >
          EventType 2-rule-test
        </p>
      </div>
      <div
        aria-label="target name card rule"
        class="makeStyles-ruleCardBody-320"
      >
        <p
          class="MuiTypography-root makeStyles-ruleCardBodyLabel-321 MuiTypography-body1"
        >
          Target:
        </p>
        <p
          aria-label="target name"
          class="MuiTypography-root makeStyles-ruleCardBodyName-322 MuiTypography-body1"
        >
          Target 2-rule-test
        </p>
      </div>
      <hr
        class="MuiDivider-root"
      />
      <div
        aria-label="filters card rule"
        class="makeStyles-ruleCardFilters-323"
      >
        <p
          class="MuiTypography-root makeStyles-ruleCardBodyLabel-321 MuiTypography-body1"
        >
          Filters:
        </p>
        <div
          aria-label="filters container"
        >
          <div
            aria-label="filter expression passthrow"
            class="makeStyles-ruleCardFilterExpressionPassthrow-435"
          >
            <h6
              class="MuiTypography-root MuiTypography-h6"
            >
              PASSTHROW
            </h6>
          </div>
        </div>
      </div>
      <hr
        class="MuiDivider-root"
      />
      <div
        aria-label="status card rule"
        class="makeStyles-ruleCardStatus-324"
      >
        <div
          class="makeStyles-ruleCardStatusDate-325"
        >
          <span
            class="MuiTypography-root MuiTypography-caption"
          >
            TUMBLING
          </span>
        </div>
        <div
          class="makeStyles-ruleCardStatusOneShot-326"
        >
          <div
            class="MuiFormGroup-root"
          >
            <label
              aria-label="skip consecutives enable"
              aria-readonly="true"
              class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementStart"
            >
              <span
                class="MuiSwitch-root MuiSwitch-sizeSmall"
              >
                <span
                  aria-disabled="false"
                  class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-461 MuiSwitch-switchBase MuiSwitch-colorPrimary PrivateSwitchBase-checked-462 Mui-checked"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <input
                      checked=""
                      class="PrivateSwitchBase-input-464 MuiSwitch-input"
                      type="checkbox"
                      value=""
                    />
                    <span
                      class="MuiSwitch-thumb"
                    />
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </span>
                <span
                  class="MuiSwitch-track"
                />
              </span>
              <span
                class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
              >
                Skip Consecutives
              </span>
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`RuleCard should render with a eventType name, target name, filters and skip execution disable 1`] = `
<div>
  <div
    aria-label="element card rule"
    class="MuiPaper-root MuiCard-root makeStyles-ruleCard-159 MuiPaper-elevation1 MuiPaper-rounded"
  >
    <div
      aria-label="header rule card"
      class="MuiCardHeader-root makeStyles-ruleCardHeader-160"
    >
      <div
        class="MuiCardHeader-avatar"
      >
        <div
          aria-label="avatar icon"
          class="MuiAvatar-root MuiAvatar-circle makeStyles-ruleCardAvatar-169 makeStyles-ruleCardAvatarPurple-172 MuiAvatar-colorDefault"
        >
          R
        </div>
      </div>
      <div
        class="MuiCardHeader-content"
      >
        <span
          class="MuiTypography-root MuiCardHeader-title MuiTypography-body2 MuiTypography-displayBlock"
        >
          Rule 3
        </span>
        <span
          class="MuiTypography-root MuiCardHeader-subheader MuiTypography-body2 MuiTypography-colorTextSecondary MuiTypography-displayBlock"
        >
          1/1/2020 11:10:10
        </span>
      </div>
      <div
        class="MuiCardHeader-action"
      >
        <button
          aria-label="settings"
          class="MuiButtonBase-root MuiIconButton-root"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
    <hr
      class="MuiDivider-root"
    />
    <div
      aria-label="content card rule"
      class="makeStyles-ruleCardContent-161"
    >
      <div
        aria-label="eventType name card rule"
        class="makeStyles-ruleCardBody-162"
      >
        <p
          class="MuiTypography-root makeStyles-ruleCardBodyLabel-163 MuiTypography-body1"
        >
          Event Type:
        </p>
        <p
          aria-label="eventType name"
          class="MuiTypography-root makeStyles-ruleCardBodyName-164 MuiTypography-body1"
        >
          EventType 3-rule-test
        </p>
      </div>
      <div
        aria-label="target name card rule"
        class="makeStyles-ruleCardBody-162"
      >
        <p
          class="MuiTypography-root makeStyles-ruleCardBodyLabel-163 MuiTypography-body1"
        >
          Target:
        </p>
        <p
          aria-label="target name"
          class="MuiTypography-root makeStyles-ruleCardBodyName-164 MuiTypography-body1"
        >
          Target 3-rule-test
        </p>
      </div>
      <hr
        class="MuiDivider-root"
      />
      <div
        aria-label="filters card rule"
        class="makeStyles-ruleCardFilters-165"
      >
        <p
          class="MuiTypography-root makeStyles-ruleCardBodyLabel-163 MuiTypography-body1"
        >
          Filters:
        </p>
        <div
          aria-label="filters container"
        >
          <div
            aria-label="container expressions"
            class="makeStyles-ruleCardFilterContainer-274"
          >
            <div
              aria-label="container expressions header"
              class="makeStyles-ruleCardFilterContainerHeader-275"
            >
              <p
                class="MuiTypography-root makeStyles-ruleCardFilterContainerHeaderText-276 MuiTypography-body1"
              >
                One Of
              </p>
            </div>
            <div
              aria-label="filter expression comparator"
              class="makeStyles-ruleCardFilterExpression-281"
            >
              <p
                aria-label="filter expression field"
                class="MuiTypography-root makeStyles-ruleCardFilterExpressionField-278 MuiTypography-body1"
              >
                hola
              </p>
              <p
                aria-label="filter expression operator"
                class="MuiTypography-root makeStyles-ruleCardFilterExpressionOperator-279 MuiTypography-body1"
              >
                =
              </p>
              <p
                aria-label="filter expression value"
                class="MuiTypography-root makeStyles-ruleCardFilterExpressionValue-280 MuiTypography-body1"
              >
                1
              </p>
            </div>
          </div>
          <div
            aria-label="container expressions"
            class="makeStyles-ruleCardFilterContainer-274"
          >
            <div
              aria-label="container expressions header"
              class="makeStyles-ruleCardFilterContainerHeader-275"
            >
              <p
                class="MuiTypography-root makeStyles-ruleCardFilterContainerHeaderText-276 MuiTypography-body1"
              >
                All Of
              </p>
            </div>
            <div
              aria-label="filter expression comparator"
              class="makeStyles-ruleCardFilterExpression-281"
            >
              <p
                aria-label="filter expression field"
                class="MuiTypography-root makeStyles-ruleCardFilterExpressionField-278 MuiTypography-body1"
              >
                adios
              </p>
              <p
                aria-label="filter expression operator"
                class="MuiTypography-root makeStyles-ruleCardFilterExpressionOperator-279 MuiTypography-body1"
              >
                =
              </p>
              <p
                aria-label="filter expression value"
                class="MuiTypography-root makeStyles-ruleCardFilterExpressionValue-280 MuiTypography-body1"
              >
                2
              </p>
            </div>
          </div>
          <div
            aria-label="filter expression comparator"
            class="makeStyles-ruleCardFilterExpression-281"
          >
            <p
              aria-label="filter expression field"
              class="MuiTypography-root makeStyles-ruleCardFilterExpressionField-278 MuiTypography-body1"
            >
              p1
            </p>
            <p
              aria-label="filter expression operator"
              class="MuiTypography-root makeStyles-ruleCardFilterExpressionOperator-279 MuiTypography-body1"
            >
              =
            </p>
            <p
              aria-label="filter expression value"
              class="MuiTypography-root makeStyles-ruleCardFilterExpressionValue-280 MuiTypography-body1"
            >
              valor
            </p>
          </div>
        </div>
      </div>
      <hr
        class="MuiDivider-root"
      />
      <div
        aria-label="status card rule"
        class="makeStyles-ruleCardStatus-166"
      >
        <div
          class="makeStyles-ruleCardStatusDate-167"
        >
          <span
            class="MuiTypography-root MuiTypography-caption"
          >
            REAL TIME
          </span>
        </div>
        <div
          class="makeStyles-ruleCardStatusOneShot-168"
        >
          <div
            class="MuiFormGroup-root"
          >
            <label
              aria-label="skip consecutives disable"
              aria-readonly="true"
              class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementStart"
            >
              <span
                class="MuiSwitch-root MuiSwitch-sizeSmall"
              >
                <span
                  aria-disabled="false"
                  class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-303 MuiSwitch-switchBase MuiSwitch-colorPrimary"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <input
                      class="PrivateSwitchBase-input-306 MuiSwitch-input"
                      type="checkbox"
                      value=""
                    />
                    <span
                      class="MuiSwitch-thumb"
                    />
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </span>
                <span
                  class="MuiSwitch-track"
                />
              </span>
              <span
                class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
              >
                Skip Consecutives
              </span>
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`RuleCard should render with a rule and snap 1`] = `
<div>
  <div
    aria-label="element card rule"
    class="MuiPaper-root MuiCard-root makeStyles-ruleCard-1 MuiPaper-elevation1 MuiPaper-rounded"
  >
    <div
      aria-label="header rule card"
      class="MuiCardHeader-root makeStyles-ruleCardHeader-2"
    >
      <div
        class="MuiCardHeader-avatar"
      >
        <div
          aria-label="avatar icon"
          class="MuiAvatar-root MuiAvatar-circle makeStyles-ruleCardAvatar-11 makeStyles-ruleCardAvatarPurple-14 MuiAvatar-colorDefault"
        >
          R
        </div>
      </div>
      <div
        class="MuiCardHeader-content"
      >
        <span
          class="MuiTypography-root MuiCardHeader-title MuiTypography-body2 MuiTypography-displayBlock"
        >
          Rule 3
        </span>
        <span
          class="MuiTypography-root MuiCardHeader-subheader MuiTypography-body2 MuiTypography-colorTextSecondary MuiTypography-displayBlock"
        >
          1/1/2020 11:10:10
        </span>
      </div>
      <div
        class="MuiCardHeader-action"
      >
        <button
          aria-label="settings"
          class="MuiButtonBase-root MuiIconButton-root"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
    <hr
      class="MuiDivider-root"
    />
    <div
      aria-label="content card rule"
      class="makeStyles-ruleCardContent-3"
    >
      <div
        aria-label="eventType name card rule"
        class="makeStyles-ruleCardBody-4"
      >
        <p
          class="MuiTypography-root makeStyles-ruleCardBodyLabel-5 MuiTypography-body1"
        >
          Event Type:
        </p>
        <p
          aria-label="eventType name"
          class="MuiTypography-root makeStyles-ruleCardBodyName-6 MuiTypography-body1"
        >
          EventType 3-rule-test
        </p>
      </div>
      <div
        aria-label="target name card rule"
        class="makeStyles-ruleCardBody-4"
      >
        <p
          class="MuiTypography-root makeStyles-ruleCardBodyLabel-5 MuiTypography-body1"
        >
          Target:
        </p>
        <p
          aria-label="target name"
          class="MuiTypography-root makeStyles-ruleCardBodyName-6 MuiTypography-body1"
        >
          Target 3-rule-test
        </p>
      </div>
      <hr
        class="MuiDivider-root"
      />
      <div
        aria-label="filters card rule"
        class="makeStyles-ruleCardFilters-7"
      >
        <p
          class="MuiTypography-root makeStyles-ruleCardBodyLabel-5 MuiTypography-body1"
        >
          Filters:
        </p>
        <div
          aria-label="filters container"
        >
          <div
            aria-label="container expressions"
            class="makeStyles-ruleCardFilterContainer-116"
          >
            <div
              aria-label="container expressions header"
              class="makeStyles-ruleCardFilterContainerHeader-117"
            >
              <p
                class="MuiTypography-root makeStyles-ruleCardFilterContainerHeaderText-118 MuiTypography-body1"
              >
                One Of
              </p>
            </div>
            <div
              aria-label="filter expression comparator"
              class="makeStyles-ruleCardFilterExpression-123"
            >
              <p
                aria-label="filter expression field"
                class="MuiTypography-root makeStyles-ruleCardFilterExpressionField-120 MuiTypography-body1"
              >
                hola
              </p>
              <p
                aria-label="filter expression operator"
                class="MuiTypography-root makeStyles-ruleCardFilterExpressionOperator-121 MuiTypography-body1"
              >
                =
              </p>
              <p
                aria-label="filter expression value"
                class="MuiTypography-root makeStyles-ruleCardFilterExpressionValue-122 MuiTypography-body1"
              >
                1
              </p>
            </div>
          </div>
          <div
            aria-label="container expressions"
            class="makeStyles-ruleCardFilterContainer-116"
          >
            <div
              aria-label="container expressions header"
              class="makeStyles-ruleCardFilterContainerHeader-117"
            >
              <p
                class="MuiTypography-root makeStyles-ruleCardFilterContainerHeaderText-118 MuiTypography-body1"
              >
                All Of
              </p>
            </div>
            <div
              aria-label="filter expression comparator"
              class="makeStyles-ruleCardFilterExpression-123"
            >
              <p
                aria-label="filter expression field"
                class="MuiTypography-root makeStyles-ruleCardFilterExpressionField-120 MuiTypography-body1"
              >
                adios
              </p>
              <p
                aria-label="filter expression operator"
                class="MuiTypography-root makeStyles-ruleCardFilterExpressionOperator-121 MuiTypography-body1"
              >
                =
              </p>
              <p
                aria-label="filter expression value"
                class="MuiTypography-root makeStyles-ruleCardFilterExpressionValue-122 MuiTypography-body1"
              >
                2
              </p>
            </div>
          </div>
          <div
            aria-label="filter expression comparator"
            class="makeStyles-ruleCardFilterExpression-123"
          >
            <p
              aria-label="filter expression field"
              class="MuiTypography-root makeStyles-ruleCardFilterExpressionField-120 MuiTypography-body1"
            >
              p1
            </p>
            <p
              aria-label="filter expression operator"
              class="MuiTypography-root makeStyles-ruleCardFilterExpressionOperator-121 MuiTypography-body1"
            >
              =
            </p>
            <p
              aria-label="filter expression value"
              class="MuiTypography-root makeStyles-ruleCardFilterExpressionValue-122 MuiTypography-body1"
            >
              valor
            </p>
          </div>
        </div>
      </div>
      <hr
        class="MuiDivider-root"
      />
      <div
        aria-label="status card rule"
        class="makeStyles-ruleCardStatus-8"
      >
        <div
          class="makeStyles-ruleCardStatusDate-9"
        >
          <span
            class="MuiTypography-root MuiTypography-caption"
          >
            REAL TIME
          </span>
        </div>
        <div
          class="makeStyles-ruleCardStatusOneShot-10"
        >
          <div
            class="MuiFormGroup-root"
          >
            <label
              aria-label="skip consecutives disable"
              aria-readonly="true"
              class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementStart"
            >
              <span
                class="MuiSwitch-root MuiSwitch-sizeSmall"
              >
                <span
                  aria-disabled="false"
                  class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-145 MuiSwitch-switchBase MuiSwitch-colorPrimary"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <input
                      class="PrivateSwitchBase-input-148 MuiSwitch-input"
                      type="checkbox"
                      value=""
                    />
                    <span
                      class="MuiSwitch-thumb"
                    />
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </span>
                <span
                  class="MuiSwitch-track"
                />
              </span>
              <span
                class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
              >
                Skip Consecutives
              </span>
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
